2007-10-26  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvolumemonitor.c:
	Don't show not user visible mounts

        * daemon/mount.c:
	Don't give fuse mounts for non visible mounts
	(as they don't get mounted)
	
        * daemon/gvfsbackendsmbbrowse.c:
        * daemon/gvfsbackendtrash.c:
	Mark as not user visible
	
2007-10-26  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.h:
	Add registerFuse call
	
        * client/gvfsfusedaemon.c:
	Register with vfs daemon
	Exit (and unmount) if daemon dies
	
        * daemon/mount.c:
	Hand out fuse mountpaths when availible.
	
        * client/gdaemonvfs.[ch]:
        * common/gmounttracker.c:
	Handle sent fuse mountpath
	
        * client/gdaemonfile.c:
	Implement g_daemon_file_get_path using fuse
	if availible.

2007-10-26  Alexander Larsson  <alexl@redhat.com>

        * client/Makefile.am:
        * client/gvfsfusedaemon.c:
	Update fuse daemon to use the giomodule instead of
	linking to a copy of the code. The old way was
	problematic with the module code being a dynamic
	type in the module and not in the fuse daemon.

2007-10-25  Alexander Larsson  <alexl@redhat.com>

        * client/smburi.c:
        * common/gvfsurimapper.[ch]:
	Make to_uri_scheme return const string.
	
        * client/gdaemonfile.[ch]:
        * client/gdaemonvfs.[ch]:
        Add _g_daemon_vfs_mountspec_has_uri_scheme and use it to
	implement g_file_has_uri_scheme

2007-10-24  Alexander Larsson  <alexl@redhat.com>

        * common/gmountsource.c:
        (g_mount_source_ask_password):
	Increase password dialog timeout to 30 minutes

2007-10-24  Alexander Larsson  <alexl@redhat.com>

        * common/gmountspec.c:
        (g_mount_spec_set_mount_prefix):
	Actually assign the mount_prefix in the GMountSpec

2007-10-23  Sebastian Dröge  <slomo@circular-chaos.org>

	* client/Makefile.am:
	Change the GIO module dir to $(libdir)/gio/modules as was
	done in GIO.
